--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mars-rover",
   "version": "1.0.0",
   "description": "A kata to practice coding skills",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
