add scripts for running unit tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A kata to practice coding skills",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
